Update licenses page

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -21,15 +21,14 @@ h1 Licenses
           h2.licensetitle Elite
           h3.licenseprice $849
         ul.licensecontent
-          strong Includes all Creative features, plus:
+          strong Includes all Performance and Creative features, plus:
           li 
             | DRM-free 
             a href="/licenses/enterprise"
               | Enterprise-wide license
             |  to all plugins
-          li Automatic and manual red-eye detection
-          li Facial detection and smart cropping
-          li PSD editing and rendering
+          li Automatic and manual red-eye detection and correction
+          li Face detection and smart cropping
           li Batch processing and .zip file creation
         .buy-buttons
           a.button1 href="https://store.imazen.io/products/imageresizer-elite-license-r4elite" class="btn btn-primary"
@@ -88,15 +87,18 @@ h1 Licenses
         ul.licensecontent
           strong Includes all Essential Features, plus:
           li Free minor version upgrades
+          li 
+            | FastScaling engine for 
+            a href="https://imageresizing.net/docs/v4/plugins/fastscaling"
+              | 4-10x better performance.
           li Disk + Memory input/output caching for terabytes of images
           li SQL, Azure, and Amazon S3 support
-          li Amazon CloudFront & Azure CDN compatible
           li 8-bit PNG/GIF & animated GIF processing
           li Secure remote image processing
           li 
             a href="/licenses/domain"
               | 1 Wildcard domain license.
-            |  Must be a valid public-facing domain. Image requests must reach ImageResizer with a matching HOST header. An Elite license is recomended for load-balanced, proxied, or clustered deployments of ImageResizer. Azure CDN requires an Elite license, as does any CDN that uses load-balancing without custom domain names.
+            |  Must be a valid public-facing domain. Image requests must reach ImageResizer with a matching HOST header. An Elite license is required for load-balanced, proxied (such as behind a CDN), or clustered deployments of ImageResizer.
         .buy-buttons
           a.button1 href="https://store.imazen.io/products/imageresizer-performance-license-r4performance" class="btn btn-primary"
             strong Buy Now
@@ -108,10 +110,9 @@ h1 Licenses
           h3.licenseprice $499
         ul.licensecontent
           strong Includes all Performance features, plus:
-          li Flexible text & image overlay support
+          li Flexible image and watermark overlay support
           li Image filtering suite
           li Advanced file format support (PSD, CR2, CNG, etc.)
-          li Optional WIC processing pipeline (2-8x performance increase)
           li Smart whitespace removal (great for product photos!)
           li Metadata preservation
         .buy-buttons
