--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -153,12 +153,13 @@ html(lang="en" class="no-js")
     - if page.meta.conversion_id
       / Google Code for View download page Conversion Page
       javascript:
-        var google_conversion_id = "#{page.meta.conversion_id}";
+        var google_conversion_id = parseInt("#{page.meta.conversion_id}", 10);
         var google_conversion_language = "en";
         var google_conversion_format = "3";
         var google_conversion_color = "ffffff";
         var google_conversion_label = "#{page.meta.conversion_label}";
-        var google_conversion_value = 0;
+        var google_conversion_value = parseInt("#{page.meta.conversion_value}", 10);
+        var google_conversion_currency = "USD";
       script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js"
       noscript
         div style="display:inline;"
