--- a/content/download.slim
+++ b/content/download.slim
@@ -5,7 +5,7 @@ Icon: download-alt
 textclass: none
 conversion_id: 1054642781
 conversion_label: HCaSCK3o3wEQ3aTy9gM
-
+conversion_value: 0
 
 h1 Download ImageResizer
 
