add canonical tag to each page to fixup some SEO issues

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -52,6 +52,8 @@ html(lang="en" class="no-js")
     link rel="preload" href="/img/bg-k10.png" as="image"
     link rel="preload" href="/img/scroll-top-top.png" as="image"
     link rel="preload" href="/img/ir-logos/imageresizer-logo-gray-160.png" as="image"
+    link rel="canonical" href="#{canonical}"
+
     /[if lt IE 9]
       script src="https://html5shim.googlecode.com/svn/trunk/html5.js"
 
