Change homepage title to ImageResizer - High performance images for responsive sites

--- a/content/index.slim
+++ b/content/index.slim
@@ -1,5 +1,5 @@
 Menu: home
-Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
+Title: ImageResizer - High performance images for responsive sites
 Libs: uservoice, plusone, -comments, typed, -highlight
 Flags: unwrap
 Layout: layout
