fix validation errors for homepage img tags

--- a/content/index.slim
+++ b/content/index.slim
@@ -201,7 +201,7 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
         .span6.home-image-bg
           .home-image-box
             .home-image-inner
-              img.change-this-image src="https://z.zr.io/ri/u3.jpg?height=200"
+              img.change-this-image alt="cable car" src="https://z.zr.io/ri/u3.jpg?height=200"
        
     h2.leftzero
         | Add commands to image URLs to get altered versions in milliseconds. 
@@ -329,28 +329,28 @@ hr
     .row
       .span3
         a.block.plaintext.color href="/benefits/customers"
-          img src="https://z.zr.io/rw/sampleimages/in-the-field.jpg?width=250"
+          img alt="" src="https://z.zr.io/rw/sampleimages/in-the-field.jpg?width=250"
           h3 In the Field
           p
             |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
       .span3
         a.block.plaintext.color href="/docs/tutorials"
-          img src="https://z.zr.io/rw/sampleimages/tutorials2.png?width=250"
-            h3 Tutorials
-            p
-              |Either watch a screencast or read a page to see ImageResizer in action.
+          img alt="" src="https://z.zr.io/rw/sampleimages/tutorials2.png?width=250"
+          h3 Tutorials
+          p
+            |Either watch a screencast or read a page to see ImageResizer in action.
       .span3
         a.block.plaintext.color href="/benefits/testimonials"
-          img src="https://z.zr.io/rw/sampleimages/testimonials.png?width=250"
-            h3 Testimonials
-            p
-              |We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
+          img alt="" src="https://z.zr.io/rw/sampleimages/testimonials.png?width=250"
+          h3 Testimonials
+          p
+            |We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
       .span3
         a.block.plaintext.color href="/docs/community"
-          img src="https://z.zr.io/rw/sampleimages/cropped-community.jpg?width=250"
-            h3 Community
-            p
-              |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
+          img alt="" src="https://z.zr.io/rw/sampleimages/cropped-community.jpg?width=250"
+          h3 Community
+          p
+            |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
   
   .oddhomepageitem
     .container
