--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -60,6 +60,8 @@ html(lang="en" class="no-js")
       script src="https://html5shim.googlecode.com/svn/trunk/html5.js"
 
     == partial :fonts
+
+    == partial :jumplead
   body
     == partial :gtm_fallback
     == partial :header
