Add OEM Subscription license 1.0

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -161,7 +161,7 @@ div.site-subheader{
 }
 
 .t ul{
-  list-style: disc inside;
+  list-style: disc outside;
   margin-top: 1em;
   margin-bottom:1em;
 }
