--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -380,6 +380,32 @@ span.imagespacer{
   font-size: @fontSizeLarge;
   .border-radius(@borderRadiusLarge);
 }
+.btn-buynow-orange {
+  .buttonBackground(softlight(#FC9100, #ffffff), #FC9100);
+  padding: @paddingLarge;
+  font-size: @fontSizeLarge;
+  .border-radius(@borderRadiusLarge);
+}
+.btn-buynow-purple {
+  .buttonBackground(softlight(#8B8FE0, #ffffff), #8B8FE0);
+  padding: @paddingLarge;
+  font-size: @fontSizeLarge;
+  .border-radius(@borderRadiusLarge);
+}
+.btn-buynow-blue {
+  .buttonBackground(softlight(#2B8FE0, #ffffff), #2B8FE0);
+  padding: @paddingLarge;
+  font-size: @fontSizeLarge;
+  .border-radius(@borderRadiusLarge);
+}
+.btn-buynow-green {
+  .buttonBackground(softlight(#0FAD07, #ffffff), #0FAD07);
+  padding: @paddingLarge;
+  font-size: @fontSizeLarge;
+  .border-radius(@borderRadiusLarge);
+}
+
+
 .bottompadding{
   padding-bottom: 20px;
 }
