--- a/content/css/less/license.less
+++ b/content/css/less/license.less
@@ -4,15 +4,35 @@ div.licensebox {
   margin-bottom: 30px;
   margin-top: 10px;
   border: 1px solid #4A4A4A;
+  font-size: 14px;
+}
+
+.licensebox li:before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    margin-right: -15px;
+}
+.licensebox .buy-buttons {
+   font-size: 16px;
 }
 
 .licensetitle{
   color: white;
-  font-size: 3em;
+  font-size: 2em;
   text-align: center;
   font-weight: bold;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.licensetitlesmall{
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .licenseprice{
@@ -20,7 +40,7 @@ div.licensebox {
   text-align: center;
   background-color: #4A4A4A;
   font-weight: bold;
-  line-height: 22px;
+  line-height: 30px;
 }
 
 .licensecontent{
