--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -5,182 +5,136 @@ Aliases: /pricing /prices /buy
 Flags: unwrap
 Layout: layout
 
+
 h1 Licenses
 
 == content_for :banner do
- 
+
 .container 
 .row.lrow.out style="padding-bottom: 50px; margin-right: 10px;"
   h1.mainheader
-    | Redistributable Licenses
+    | Site License
 
+  .row-fluid
+    .span12 style="text-align:center;"
+      h2
+        | Unlimited servers, instances, and domains. One key for your entire organization.
+      h4
+        | Billed monthly. No contracts. Change or cancel at any time. Pricing for organizations with < 500 employees.
   .row-fluid
     .lrow 
       div.licensebox.span4
-        div style="background-color: #FA2F2F;"
-          h2.licensetitle Elite
-          h3.licenseprice $849
-        ul.licensecontent
-          strong Includes all Performance and Creative features, plus:
-          li 
-            | DRM-free 
-            a href="/licenses/enterprise"
-              | Enterprise-wide license
-            |  to all plugins
-          li Automatic and manual red-eye detection and correction
-          li Face detection and smart cropping
-          li Batch processing and .zip file creation
-        .buy-buttons
-          a.button1 href="https://store.imazen.io/products/imageresizer-elite-license-r4elite" class="btn btn-primary"
-            strong Buy Now
-          a href="/plugins/editions/elite" class="btn btn-primary"
-            strong Find Out More
-      div.licensebox.span4
         div style="background-color: #2B8FE0;"
-          h2.licensetitle OEM
-          h3.licenseprice $2800
+          h2.licensetitle 24/7 Business Support
+          h3.licenseprice $499/mo
+
         ul.licensecontent
-          strong 
-            | This includes an Elite license and an 
-            a href="/licenses/oem"
-              | OEM Redistribution license. 
-            | A scope agreement for redistribution is required.
+          strong Elite Edition Site License, plus:
+          li
+            strong
+              | 24/7 access to our development team
+          li
+            strong
+              | Onboarding call and architecture review
+          li
+            strong
+              | Hotfixes within 7 business days
+          li 
+            | 1 free 24/7 emergency incident per year
+          li 
+            | Unlimited email and phone support during business hours
+          li 
+            | We support all your employees and contractors
+          li 
+            | Maximum response time of 24 hours
+
         .buy-buttons
-          a.button1 href="https://store.imazen.io/products/r4-oem-license" class="btn btn-primary"
-            strong Buy Now
+          a href="https://imazen.chargebee.com/hosted_pages/plans/247-business-support-and-imageresizer-elite" class="btn btn-primary btn btn-primary btn-buynow-blue"
+            strong Get support &#8226; $499/mo
       div.licensebox.span4
         div style="background-color: #8B8FE0;"
-          h2.licensetitle SaaS
-          h3.licenseprice $7800
+          h2.licensetitle Email Support
+          h3.licenseprice $249/mo
         ul.licensecontent
-          strong 
-            | This includes an Elite license and an 
-            a href="/licenses/saas"
-              | SaaS usage license. 
-            | A scope agreement for SaaS usage is required.
-        .buy-buttons
-          a.button1 href="https://store.imazen.io/products/r4-saas-license" class="btn btn-primary"
-            strong Buy Now          
+          strong Elite Edition Site License, plus:
+          li
+            strong
+              | 30 email support incidents per month
+          li
+            strong
+              | Onboarding call and media architecture review with our dev team (up to 30 minutes)
+          li 
+            | We support all your employees and contractors
+          li
+            | Maximum response time of 3 business days
+          li
+            | Redistribute only with bespoke software
+          li 
+            a href="https://imazen.chargebee.com/hosted_pages/plans/imageresizer-elite-oem-email"
+              | Redistribute with your product for +$200/mo 
 
-.row.lrow.out style="margin-top: -20px; padding-bottom: 30px; margin-right: 10px;"
-  h1.mainheader.lic Domain Licenses
-  .row-fluid
-    .lrow
-      div.licensebox.span4
-        div style="background-color: #C62AD4;"
-          h2.licensetitle Essential
-          h3.licenseprice Free
-        ul.licensecontent
-          li RESTful URL-based Imaging API
-          li Mirrored URL and Managed APIs
-          li Intuitively crop, resize, rotate, flip, constrain and encode
-          li Render PDFs into images
-          li 19 plugins cover most common tasks
-          li Includes TinyCache for small websites
         .buy-buttons
-          a href="/plugins/editions/free" class="btn btn-primary"
-            strong Find Out More
-      div.licensebox.span4
-        div style="background-color: #0FAD07;"
-          h2.licensetitle Performance
-          h3.licenseprice $249
-        ul.licensecontent
-          strong Includes all Essential Features, plus:
-          li Free minor version upgrades
-          li 
-            | FastScaling engine for 
-            a href="https://imageresizing.net/docs/v4/plugins/fastscaling"
-              | 4-10x better performance.
-          li Disk + Memory input/output caching for terabytes of images
-          li SQL, Azure, and Amazon S3 support
-          li 8-bit PNG/GIF & animated GIF processing
-          li Secure remote image processing
-          li 
-            a href="/licenses/domain"
-              | 1 Wildcard domain license.
-            |  Must be a valid public-facing domain. Image requests must reach ImageResizer with a matching HOST header. An Elite license is required for load-balanced, proxied (such as behind a CDN), or clustered deployments of ImageResizer.
-        .buy-buttons
-          a.button1 href="https://store.imazen.io/products/imageresizer-performance-license-r4performance" class="btn btn-primary"
-            strong Buy Now
-          a href="/plugins/editions/performance" class="btn btn-primary"
-            strong Find Out More
+          a href="https://imazen.chargebee.com/hosted_pages/plans/smb-site-and-email-imageresizer-elite" class="btn btn-buynow-purple"
+            strong Sign up now &#8226; $249/mo
       div.licensebox.span4
         div style="background-color: #FC9100;"
-          h2.licensetitle Creative
-          h3.licenseprice $499
+          h2.licensetitle Elite Edition Site License
+          h3.licenseprice $149/mo
+        
         ul.licensecontent
-          strong Includes all Performance features, plus:
-          li Flexible image and watermark overlay support
-          li Image filtering suite
-          li Advanced file format support (PSD, CR2, CNG, etc.)
-          li Smart whitespace removal (great for product photos!)
-          li Metadata preservation
+          strong
+            | All 
+            a href="#editions"
+              |  ImageResizer Elite Edition features
+            | , plus:
+          li
+            | An enterprise-wide license which covers all offices, parent companies, and subsidiaries
+          li
+            strong
+            | Free perpetual license after 3 years (for existing releases)
+          li
+            | Community support via StackOverflow
+          li
+            | Redistribute only with bespoke software
+          li 
+            a href="https://imazen.chargebee.com/hosted_pages/plans/imageresizer-elite-oem"
+              | Redistribute with your product for +$200/mo 
+          li
+            | Not for reselling usage of ImageResizer; your hosted service/platform likely requires 
+            a href="/licenses/server"
+              | per-server licensing (from $70/mo)
+            | .
+          
+    
         .buy-buttons
-          a.button1 href="https://store.imazen.io/products/imageresizer-creative-license-r4creative" class="btn btn-primary"
-            strong Buy Now
-          a href="/plugins/editions/creative" class="btn btn-primary"
-            strong Find Out More
+          a href="https://imazen.chargebee.com/hosted_pages/plans/smb-site-license:-imageresizer-elite" class="btn btn-primary btn-buynow-orange"
+            strong Get 30 days free &#8226; $149/mo
+  .row-fluid
+    .span12 style="text-align:center;"
+      h3
+        | More than 500 employees? Need to pay yearly? Call 1.812.809.0605 or email 
+        em
+          | sales@imazen.io
+      h4
+        strong 
+          | Site-wide licenses are not for reselling usage of ImageResizer; your hosted service/platform likely requires 
+          a href="/licenses/server"
+            | per-server licensing (from $70/mo)
+          | .
 
+.row.lrow.out style="margin-top: -20px; padding-bottom: 30px; margin-right: 10px;"
+  h1.mainheader.lic Non-profit and startup pricing
+  .row-fluid
+    .span12 style="text-align:center;"
 
+      h3 
+        | Fewer than 5 employees? Less than $2 million in annual revenue?
+      h3
+        | Non-profit? B Corp? Micro-enterprise? E-mail sales@imazen.io for a discount. 
+      / 
+        h3 style="margin-top:2em;"
+        | Fewer than 30 employees? Get the Site-wide Performance Edition - for $840/yr or $79/mo. 
 
   div style="clear:both"
-
-.container
-  .row
-    .span4
-      markdown:
-        ## Overview
-        The ImageResizer core library and [18 plugins in the Essential edition](/plugins/editions/free) are free and open-source. In version 4, they are provided under the [Apache 2 license](/licenses/apache); in v3 they are provided under [the Resizer Freedom license](/licenses/freedom). 
-
-        Development of ImageResizer is funded by our commerical licenses ([Performance](/plugins/editions/performance), [Creative](/plugins/editions/creative), [Elite](/plugins/editions/elite), [OEM](/licenses/oem), and [SaaS](/licenses/saas)). All licenses include source code and permit modification; most permit some redistribution. 
-
-        All Imazen software is open-source, and your funds help (both directly, and indirectly) maintain dozens of critical low-level, permissively-licensed OSS libraries across a wide spectrum. Visit [our GitHub profile](https://github.com/imazen) to see some of the work we maintian. 
-
-        If you are able to comply with the AGPL v3 and provide the public with access to the complete source code for your website/service under any [AGPL v3](/licenses/agpl) acceptable terms (which includes MIT, GPLv3, and [Apache 2](/licenses/apache)), then you may use all ImageResizer plugins for free under the terms of the [AGPL v3](/licenses/agpl).
-    .span4
-      markdown:
-         ## Index of licenses
-
-         
-         * [Apache 2][apache]
-         * [Resizer Freedom][freedom]
-         * [Resizer Trial][trial]: You get this for free. Allows unlimited development and local testing of the software, without time-limits.
-         * [Resizer Domain][domain]: The [Performance](/plugins/editions/performance) and [Creative](/plugins/editions/creative) editions are provided under this license.
-         * [Resizer Enterprise][enterprise]: The [Elite edition](/plugins/editions/elite), OEM, and SaaS products include and Enterprise license.
-         * [Resizer OEM][oem]: You buy this for business-wide use and resale. Available for purchase [here](https://store.imazen.io/products/r4-oem-license).
-         * [Resizer SaaS][saas]: You buy this for using ImageResizer in a SaaS product. Available for purchase [here](https://store.imazen.io/products/r4-saas-license).
-         * [Resizer Professional Client][proclient]: This license can be given to you by a holder of an [Enterprise][enterprise] license, for use as part of a custom development project. It can also be sold to you by a holder of the [OEM][oem] license as part of a software package.
-         * [AGPLv3][agpl]
-         * [PdfRenderer License](/licenses/pdfrenderer)
-         * [Imazen Contributor Agreement](/licenses/contribute)
-         * [Imazen Software Grant and Corporate Contributor License Agreement](/licenses/contribute-corp)
-
-        [apache]: /licenses/apache  "Apache 2 License"
-        [agpl]: /licenses/agpl  "GNU Affero General Public License v3"
-        [freedom]: /licenses/freedom  "Resizer Freedom License"
-        [trial]: /licenses/trial  "Resizer Trial License"
-        [domain]: /licenses/domain  "Imazen Domain License"
-        [pro]: /licenses/pro  "Resizer Professional License"
-        [proclient]: /licenses/proclient  "Resizer Professional Client License"
-        [enterprise]: /licenses/enterprise  "Resizer Enterprise License"
-        [oem]: /licenses/oem  "Resizer OEM License"
-        [saas]: /licenses/oem  "Resizer SaaS License"
-        [contribute]: /licenses/contribute  "Imazen Contributor Agreement"
-    .span4
-      markdown:
-        ## Top questions from our [Sales FAQ](https://store.imazen.io/faq)
-        Q: Do licenses expire?
-        : No, even support contracts include permanent licenses. Unless you have a support contract, you *will* have to pay to upgrade when a new major version is released.
-        
-        Q: Can I buy plugins individually?
-        : No &mdash; they're designed to work together. Plugins can only be purchased in the editions you see here.
-
-        Q: Can I upgrade from one license to another? 
-        : Our permanent, offline license keys can't be changed, which makes this impossible. We encourage you to select a license  appropriate for your future needs when possible.
-        
-        Q: What can I use for free?
-        : The [Essential Edition](/plugins/editions/essential) and all sample projects. Check your diagnostics page to verify you're not using any paid/AGPL3 plugins.
-
-        Q: Do you have a redistribution/integration guide?
-        : [Yes, we do have information on redistributing and integrating ImageResizer](/docs/redist).
-
+== partial :"subscription/editions"
+== partial :"subscription/footer"
