--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -41,7 +41,7 @@ h1 Support
         3. The question is about the URL API and [follows best practices](/docs/best-practices).
         4. The question is detailed enough to answer and shows some diagnostic effort (Just "It's not working" probably won't get you the answer you need)
 
-        #### *Have an active support contract? Email support@imageresizing.net* 
+        #### If you [have a support subscription](/licenses), email support@imageresizing.net
 
         1. The [diagnostics page output](/plugins/diagnostics).
         2. If there is an error message, [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror).
@@ -52,45 +52,4 @@ h1 Support
       == partial :support_times
 
 
-  .span4.oddhomepageitem
-    h1.home3.bottompadding
-      |Support Contracts
-    p
-      markdown:
-        Customers who purchased a support contract before Nov 13 2015 will have access to one of these plans. Due to declining interest in .NET as a platform, we have suspended sales of new support contracts.
-    a href="support/contracts/gold" 
-      img src="/img/contracts/contract-hero-gold.png?width=100"
-    p style= "font-size: 14pt"
-      em 
-        |Some 
-        a href="/support/contracts/gold" Gold 
-        |features inlude
-    ul.starlist.support
-      li
-        strong Unlimited emergency incidents
-      li 2 hour rapid response time
-      li Hot-fixes in 2 business days
-    a href="support/contracts/silver" 
-      img src="/img/contracts/contract-hero-silver.png?width=100"
-    p style= "font-size: 14pt"
-      em 
-        |Some 
-        a href="/support/contracts/silver" Silver 
-        |features inlude
-    ul.starlist.support
-      li 
-        strong Unlimited business hours incidents
-      li 2 hours architecture planning
-      li 5 assisted installs
-    a href="support/contracts/bronze" 
-      img src="/img/contracts/contract-hero-bronze.png?width=100"
-    p style= "font-size: 14pt"
-      em 
-        |Some 
-        a href="/support/contracts/bronze" Bronze 
-        |features inlude
-    ul.starlist.support
-      li 30 minutes architecture planning
-      li A free priority support incident every month
-      li Free software upgrades for the duration of the contract
-
+  
