switch to account.imazen.io, add notices to legalise

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -49,7 +49,7 @@ h1 Licenses
             | Maximum response time of 24 hours
 
         .buy-buttons
-          a href="https://imazen.chargebee.com/hosted_pages/plans/247-business-support-and-imageresizer-elite" class="btn btn-primary btn btn-primary btn-buynow-blue"
+          a href="https://account.imazen.io/hosted_pages/plans/247-business-support-and-imageresizer-elite" class="btn btn-primary btn btn-primary btn-buynow-blue"
             strong Get support &#8226; $499/mo
       div.licensebox.span4
         div style="background-color: #8B8FE0;"
@@ -70,11 +70,11 @@ h1 Licenses
           li
             | Redistribute only with bespoke software
           li 
-            a href="https://imazen.chargebee.com/hosted_pages/plans/imageresizer-elite-oem-email"
+            a href="https://account.imazen.io/hosted_pages/plans/imageresizer-elite-oem-email"
               | Redistribute with your product for +$200/mo 
 
         .buy-buttons
-          a href="https://imazen.chargebee.com/hosted_pages/plans/smb-site-and-email-imageresizer-elite" class="btn btn-buynow-purple"
+          a href="https://account.imazen.io/hosted_pages/plans/smb-site-and-email-imageresizer-elite" class="btn btn-buynow-purple"
             strong Sign up now &#8226; $249/mo
       div.licensebox.span4
         div style="background-color: #FC9100;"
@@ -97,7 +97,7 @@ h1 Licenses
           li
             | Redistribute only with bespoke software
           li 
-            a href="https://imazen.chargebee.com/hosted_pages/plans/imageresizer-elite-oem"
+            a href="https://account.imazen.io/hosted_pages/plans/imageresizer-elite-oem"
               | Redistribute with your product for +$200/mo 
           li
             | Not for reselling usage of ImageResizer; your hosted service/platform likely requires 
@@ -107,7 +107,7 @@ h1 Licenses
           
     
         .buy-buttons
-          a href="https://imazen.chargebee.com/hosted_pages/plans/smb-site-license:-imageresizer-elite" class="btn btn-primary btn-buynow-orange"
+          a href="https://account.imazen.io/hosted_pages/plans/smb-site-license:-imageresizer-elite" class="btn btn-primary btn-buynow-orange"
             strong Get 30 days free &#8226; $149/mo
   .row-fluid
     .span12 style="text-align:center;"
