--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -61,7 +61,7 @@ html(lang="en" class="no-js")
 
     == partial :fonts
 
-    == partial :jumplead
+    / == partial :jumplead
   body
     == partial :gtm_fallback
     == partial :header
