--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -11,6 +11,20 @@ h1 Licenses
 == content_for :banner do
 
 .container 
+.row.lrow.out style="padding-bottom: 20px; margin-right: 10px;"
+  h1.mainheader
+    | Get clear answers and optimal pricing
+  .row-fluid
+    .span12 style="text-align:center;"
+      a class="typeform-share  btn btn-primary btn-large" href="https://nathanaeljones.typeform.com/to/rvtGcz" data-mode="1" target="_blank"
+        | Answer 10 questions; get expert advice
+      h2 style="margin-top:10px"
+        | (answer more for coding and deployment tips)
+javascript: 
+  (function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
+
+
+.container 
 .row.lrow.out style="padding-bottom: 50px; margin-right: 10px;"
   h1.mainheader
     | Site License
